[tool.poetry]
name = "advent-2022"
version = "0.0.1"
description = "Advent of Code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "./advent"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scalene = "^1.5.16"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pycodestyle = "^2.10.0"
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
